# mlops_demo_pipeline

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.inference  Makefile  README.md  dockercommandsref.txt  main.py  pyproject.toml  requirements.txt  tasks.py
config/: config.yaml
mlruns/743203749755858063/: meta.yaml
mlruns/743203749755858063/ea7b8c0cd6d34f6e8b3040ac4f6d3436/: meta.yaml
mlruns/743203749755858063/ea7b8c0cd6d34f6e8b3040ac4f6d3436/metrics/: accuracy
mlruns/743203749755858063/ea7b8c0cd6d34f6e8b3040ac4f6d3436/outputs/m-9f10bda8986240bea3d76860dc8f1441/: meta.yaml
mlruns/743203749755858063/ea7b8c0cd6d34f6e8b3040ac4f6d3436/tags/: mlflow.runName
mlruns/743203749755858063/models/m-9f10bda8986240bea3d76860dc8f1441/: meta.yaml
mlruns/743203749755858063/models/m-9f10bda8986240bea3d76860dc8f1441/artifacts/: MLmodel  conda.yaml  model.skops
mlruns/743203749755858063/models/m-9f10bda8986240bea3d76860dc8f1441/metrics/: accuracy
output/: model.pkl
src/: pipeline.py
src/config/: config_loader.py
src/data/: data.py  data_main.py  validate.py
src/data/schemas/: iris.py
src/features/: features.py  features_main.py
src/inference/: app.py  inference_main.py
src/model/: model.py  model_main.py
tests/: conftest.py
tests/test_data/: test_data.py
tests/test_features/: test_features.py
tests/test_model/: test_model.py
